--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.1.6",
     "@xyflow/react": "^12.8.2",
     "bootstrap": "^5.3.7",
+    "izitoast": "^1.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
